<resources>
    <string name="app_name">Enter Details</string>

    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="area">Area</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="email">Email</string>
    <string name="bd">Birthday</string>

    <string name="submit">Submit</string>
    <string name="save">Save and display</string>
    <string name="saveRe">Save Recycler</string>

</resources>